<?xml version="1.0"?>
<package>
  <name>testit_sut</name>
  <version>0.0.0</version>
  <description>Scalable Long-Term Autonomy Testing toolkit SUT additions</description>

  <maintainer email="gert.kanter@taltech.ee">Gert Kanter</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/testit</url>
  <url type="bugtracker">https://github.com/GertKanter/testit/issues</url>
  <url type="repository">https://github.com/GertKanter/testit</url>


  <author email="gert.kanter@taltech.ee">Gert Kanter</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>testit_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>testit_msgs</run_depend>
</package>
